--- a/src/file-slice/index.html
+++ b/src/file-slice/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div>
-    <input id="uploadFile" type="file" onChange="handleFileChange()" />
-    <button onClick="handleUpload()">上传</button>
+    <input id="uploadFile" type="file" onchange="handleFileChange()" />
+    <button onclick="handleUpload()">上传</button>
   </div>
 </body>
 
@@ -25,11 +25,11 @@
     file = files.files[0]
   }
 
-  const handleUpload = () => {
-    let fileHash = await this.calculateHash(fileChunkList);
-
+  const handleUpload = async () => {
     if (!file) return
     let fileChunk = createFileChunk(file)
+    let fileHash = await calculateHash(fileChunk);
+
     file = fileChunk.map(({
       file
     }, index) => ({
